--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <h2 class="header">✨ SLACK COMMUNITY ✨</h2>
             <a href="https://twitter.com/wnb_rb" target="_blank" class="links">Reach out to us for the invite</a>
         <h2 class="header">✨ PAST TALKS ✨</h2>
+            <a href="https://www.youtube.com/watch?v=Qm6X93VQaDE" target="_blank" class="links">Lori M Olson: DragonRuby: Let’s talk about apps (04/2021)</a>
             <a href="https://www.youtube.com/watch?v=Qm6X93VQaDE" target="_blank" class="links">Brittany Martin: Gemless (03/2021)</a>
             <a href="https://www.youtube.com/watch?v=Qm6X93VQaDE" target="_blank" class="links">Emily Giurleo: Five Errors You Encounter When Upgrading Your Ruby Gems (03/2021)</a>
         <a href="https://github.com/wnbrb/wnb-linktree" target="_blank" ><i class="fa fa-github fa_custom fa-3x"></i></a>
