--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
         <h2 class="header">✨ SLACK COMMUNITY ✨</h2>
             <a href="https://twitter.com/wnb_rb" target="_blank" class="links">Reach out to us for the invite</a>
         <h2 class="header">✨ PAST TALKS ✨</h2>
-            <a href="https://www.youtube.com/watch?v=Qm6X93VQaDE" target="_blank" class="links">Rose W: Rails application templates and rewriting scaffold templates (04/2021)</a>
-            <a href="https://www.youtube.com/watch?v=Qm6X93VQaDE" target="_blank" class="links">Lori M Olson: DragonRuby: Let’s talk about apps (04/2021)</a>
+            <a href="https://youtu.be/HDUCFeWoQrE" target="_blank" class="links"> Isabelle Lafont: MJML, a parser, and a template engine for Ruby (05/2021)</a>
+            <a href="https://youtu.be/H1DSN9rQxE4" target="_blank" class="links"> Kerri Miller: All the code’s a stage (05/2021)</a>  
+            <a href="https://www.youtube.com/watch?v=m7e1PpdnrzA" target="_blank" class="links">Rose W: Rails application templates and rewriting scaffold templates (04/2021)</a>
+            <a href="https://www.youtube.com/watch?v=veJMj-BtkI4" target="_blank" class="links">Lori M Olson: DragonRuby: Let’s talk about apps (04/2021)</a>
             <a href="https://www.youtube.com/watch?v=Qm6X93VQaDE" target="_blank" class="links">Brittany Martin: Gemless (03/2021)</a>
-            <a href="https://www.youtube.com/watch?v=Qm6X93VQaDE" target="_blank" class="links">Emily Giurleo: Five Errors You Encounter When Upgrading Your Ruby Gems (03/2021)</a>
+            <a href="https://www.youtube.com/watch?v=oBbsBLtXYRM" target="_blank" class="links">Emily Giurleo: Five Errors You Encounter When Upgrading Your Ruby Gems (03/2021)</a>
         <a href="https://github.com/wnbrb/wnb-linktree" target="_blank" ><i class="fa fa-github fa_custom fa-3x"></i></a>
         <script>
             console.clear()
