--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <h2 class="header">✨ SLACK COMMUNITY ✨</h2>
             <a href="https://twitter.com/wnb_rb" target="_blank" class="links">Reach out to us for the invite</a>
         <h2 class="header">✨ PAST TALKS ✨</h2>
+            <a href="https://youtu.be/9Rv4uKdHeyc" target="_blank" class="links"> Sweta Sanghavi: Exceptions: Not So Exceptional (06/2021)</a>
             <a href="https://youtu.be/HDUCFeWoQrE" target="_blank" class="links"> Isabelle Lafont: MJML, a parser, and a template engine for Ruby (05/2021)</a>
             <a href="https://youtu.be/H1DSN9rQxE4" target="_blank" class="links"> Kerri Miller: All the code’s a stage (05/2021)</a>  
             <a href="https://www.youtube.com/watch?v=m7e1PpdnrzA" target="_blank" class="links">Rose W: Rails application templates and rewriting scaffold templates (04/2021)</a>
