Add orange gradient and code of conduct link

--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
         <!-- Profile name-->
         <h1 class="profile name"><a href="https://twitter.com/wnb_rb"  target="_blank" class="profile name">WNB.rb</a></h1>
         <!-- Profile motto-->
-        <h2 class="profile motto">meetup and community</h2>
+        <h2 class="profile motto">A meetup and community for women and nonbinary Rubyists</h2>
         <!-- Links and Headers-->
-        <h2 class="header">✨ EVENTS ✨</h2>
+        <h2 class="header">EVENTS</h2>
             <a href="https://www.eventbrite.com/o/wnbrb-32770260241" target="_blank" class="links">Our Eventbrite</a>
-        <h2 class="header">✨ SLACK COMMUNITY ✨</h2>
+        <h2 class="header">SLACK COMMUNITY</h2>
             <a href="https://twitter.com/wnb_rb" target="_blank" class="links">Reach out to us for the invite</a>
-        <h2 class="header">✨ PAST TALKS ✨</h2>
+        <h2 class="header">READ FIRST</h2>
+            <a href="https://tinyurl.com/wnb-rb-coc" target="_blank" class="links">Code of Conduct</a>
+        <h2 class="header">PAST TALKS</h2>
             <a href="https://youtu.be/9Rv4uKdHeyc" target="_blank" class="links"> Sweta Sanghavi: Exceptions: Not So Exceptional (06/2021)</a>
             <a href="https://youtu.be/HDUCFeWoQrE" target="_blank" class="links"> Isabelle Lafont: MJML, a parser, and a template engine for Ruby (05/2021)</a>
-            <a href="https://youtu.be/H1DSN9rQxE4" target="_blank" class="links"> Kerri Miller: All the code’s a stage (05/2021)</a>  
+            <a href="https://youtu.be/H1DSN9rQxE4" target="_blank" class="links"> Kerri Miller: All the code’s a stage (05/2021)</a>
             <a href="https://www.youtube.com/watch?v=m7e1PpdnrzA" target="_blank" class="links">Rose W: Rails application templates and rewriting scaffold templates (04/2021)</a>
             <a href="https://www.youtube.com/watch?v=veJMj-BtkI4" target="_blank" class="links">Lori M Olson: DragonRuby: Let’s talk about apps (04/2021)</a>
             <a href="https://www.youtube.com/watch?v=Qm6X93VQaDE" target="_blank" class="links">Brittany Martin: Gemless (03/2021)</a>
@@ -48,7 +50,7 @@
         <script>
             console.clear()
             const styles = [
-                'color: #f66960', 
+                'color: #f66960',
                 'font-size: 30px',
                 'padding: 10px',
                 'margin: 10px 0 10px 0'
